--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .shadow-with-border {
+    border: 1px soild #ccc;
+    box-shadow: 0px 2px 8px;
+  }
+}
+@layer components {
+  .nav-bts {
+    @apply place-items-center justify-between delay-200 ease-in [&>div>a>span]:mx-[10px] [&>div>a>span]:transition-colors hover:[&>div>a>span]:text-[#e76712];
+  }
+}
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
